Add network policy to allow monitoring of monitoring-dash app (#7)

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,4 +60,6 @@ jobs:
         run: cf push --var ENVIRONMENT_NAME=${{ steps.deployment-target.outputs.ENVIRONMENT_NAME }}
 
       - name: Apply CF Network Policies
-        run: cf add-network-policy monitoring-dash monitoring
+        run: |
+          cf add-network-policy monitoring-dash monitoring
+          cf add-network-policy monitoring monitoring-dash
