update grafana version (#9)
* Move Procfile into to 'processes' section in manifest

* Update Grafana to 8.0.2

https://grafana.com/grafana/download/8.0.2

--- a/manifest.yml
+++ b/manifest.yml
@@ -10,3 +10,6 @@ applications:
       - route: identity-give-monitoring-dash-((ENVIRONMENT_NAME)).apps.internal
     env:
       ENVIRONMENT_NAME: ((ENVIRONMENT_NAME))
+    processes:
+      - type: web
+        command: ./install_grafana.sh && ./bin/grafana-server web
