Set admin password for Grafana (#19)
We are currently protecting the Grafana service by only allowing access
via SSH, but the option is available to also set the admin password for
those who have SSH access. Setting this is simple and increases our
security posture if only marginally.

--- a/manifest.yml
+++ b/manifest.yml
@@ -10,6 +10,7 @@ applications:
       - route: identity-idva-monitoring-dash-((ENVIRONMENT_NAME)).apps.internal
     env:
       ENVIRONMENT_NAME: ((ENVIRONMENT_NAME))
+      GRAFANA_PASS: ((GRAFANA_PASS))
     processes:
       - type: web
         command: ./install_grafana.sh && ./bin/grafana-server web
