Ignore the invalid certificate being used on the prometheus server (#24)

--- a/conf/provisioning/datasources/prometheus.yaml
+++ b/conf/provisioning/datasources/prometheus.yaml
@@ -5,6 +5,8 @@ datasources:
  - name: idva-monitoring-data
    type: prometheus
    access: proxy
-   url: http://identity-idva-monitoring-${ENVIRONMENT_NAME}.apps.internal:$PORT
+   url: https://identity-idva-monitoring-${ENVIRONMENT_NAME}.apps.internal:$PORT
    isDefault: true
    editable: false
+   jsonData:
+     tlsSkipVerify: true
